[package]
name = "among-us"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

description = "An Among Us clone made in Rust."
readme = "README.md"
repository = "https://github.com/frostu8/among-us"

license = "Unlicense"
license-file = "UNLICENSE"

[dependencies]
sat = { git = "https://github.com/frostu8/sat", tag = "v0.1.0-alpha" }
